Frontend: scrollbar action fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,7 +25,7 @@ body {
 
 /* Login Page */
 .login-container {
-  min-height: 100vh;
+  min-height: 92vh;
   display: flex;
   align-items: center;
   justify-content: center;
